--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,12 @@
     "css-loader": "^5.0.0",
     "file-loader": "^6.2.0",
     "foundation-sites": "^6.7.5",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "html-webpack-plugin": "^5.2.0",
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^0.9.0",
